--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
+    "react-country-region-selector": "^3.6.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-phone-input-2": "^2.15.1",
     "react-router": "^6.22.0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
+    "react-select-country-list": "^2.2.3",
     "web-vitals": "^2.1.4",
     "zxcvbn": "^4.4.2"
   },
